--- a/src/css/mainPage.css
+++ b/src/css/mainPage.css
@@ -41,7 +41,15 @@
 
     overflow-wrap: anywhere;
 }
-
+.header{
+    display: flex;
+    background-color: white;
+    justify-content: space-between;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 20px;
+}
 
 .hr {
     width: 100%;
@@ -56,7 +64,7 @@
     justify-content: center;
     padding: 10px 20px;
     background-color: #D9D9D9;
-
+    cursor: pointer;
     text-align: center;
     border-radius: 50px; /* Радиус закругления для капсулы */
 
@@ -65,7 +73,28 @@
 
 
 
+.centerpoint {
+    top: 20%;
+    left: 50%;
+    position: absolute;
+}
 
+dialog {
+    position: relative;
+  display: flex;
+  flex-direction: column;
+  grid-template-columns: 1fr; 
+  gap: 15px;
+
+    width: 600px;
+    margin-left: -300px;
+
+    height:auto;
+
+    background-color: #fff;  
+    border-radius: 15px;     
+  border: 3px solid #ccc;
+}
 
 
 
