--- a/src/css/mainPage.css
+++ b/src/css/mainPage.css
@@ -71,12 +71,26 @@
 
 }
 
+.modalOverlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
-.centerpoint {
+
+.centerpointModal {
     top: 20%;
     left: 50%;
     position: absolute;
+    z-index: 1000;
 }
 
 dialog {
@@ -97,6 +111,19 @@ dialog {
 }
 
 
+.roundBtn
+{
+  border-Radius : 50%; 
+  width : 30px; 
+  height : 30px;
+  cursor: pointer;
+}
 
+.headline
+{
+  font-size: 22px;
+  margin: 0px;
+  max-width: 50%;
+}
 
 
